--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "license": "LGPL-3.0-or-later",
     "require": {
         "ohtarr/azure":"dev-master",
-        "silber/bouncer": "^1.0"
+        "silber/bouncer": "^1.0",
+        "doctrine/dbal": "^3.4"
     },
     "authors": [
         {
